[project]
name = "genai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "block-bootstrap-pytorch>=0.1.6",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "spacy>=3.8.11",
    "torch-geometric>=2.7.0",
]

[tool.uv.workspace]
members = [
    "GraphVQA",
]
